# LostInTheMiddle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  research_plan.txt
.claude/: settings.local.json
DatasetBuilder/: CODEBASE.md  PIPELINE.md  build_30doc_dataset.py  run_stage.py  spec.md
DatasetBuilder/dataset/: filter_report.json  final_dataset.json  raw_qa_batch1.json  raw_qa_batch2.json  raw_qa_batch3.json  raw_qa_batch4.json  raw_qa_pairs.json  validation_report.json  verified_qa_pairs.json
DatasetBuilder/dataset/chunked_passages/: 2024_booker_prize.json  2024_fifa_intercontinental_cup.json  2024_in_film.json  2024_in_music.json  2024_nobel_prizes.json  2024_summer_olympics.json  2024_tour_de_france.json  2024_united_states_presidential_election.json  2024_wimbledon_championships.json  2025_australian_open.json  2025_in_film.json  2025_in_literature.json  2025_in_politics.json  66th_annual_grammy_awards.json  67th_annual_grammy_awards.json  77th_british_academy_film_awards.json  78th_british_academy_film_awards.json  81st_golden_globes.json  82nd_golden_globes.json  97th_academy_awards.json  (+5 more)
DatasetBuilder/pipeline/: config.py  expand_aliases.py  stage1_harvest.py  stage2_chunk.py  stage4_filter.py  stage4_full_filter.py  stage5_distractors.py  stage6_validate.py
data_misc/: preambles.json
notebooks/: 01_replication_20doc.ipynb  01_replication_30doc.ipynb  01_replication_wiki.ipynb  02_preamble_length.ipynb
results/: exp0_30doc_replication.csv  exp0_wiki_replication.csv  exp1_preamble_length.csv
src/litm/: api.py  env.py  prompts.py  scoring.py
(+26 files in other folders)
