[project]
name = "litm-paper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
